2004-03-30  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclets.r (removed): obsolete holdover from mac classic.

2004-03-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPPM.c (ReadPPMStringHeader): Code to read PPM/PGM data
	(StringReadPPM, StringMatchPPM): from strings/bytearrays. [FRQ 540375]

2004-03-26  Don Porter  <dgp@users.sourceforge.net>

	* unix/tcl.m4:	Replaced -Wno-strict-alias with more portable
	-fno-strict-alias alternative.

	* README:		Bump version to 8.5a2.
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.57
	* win/configure:

2004-03-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPPM.c (StringWritePPM): New function to support
	converting of images to PPM strings.  Other direction not yet
	done.  Rest of file converted to use new image API.
	* generic/tkImgPhoto.c (ImgPhotoCmd): Restored support for the
	stringWriteProc of old photo formats.  [Bug 923555]

2004-03-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/winfo.n: Clarified the range of colour intensities returned
	by [winfo rgb].  [Bug 922610]

2004-03-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/ConfigWidg.3: Converted malloc/free to Tcl_Alloc/Tcl_Free to
	help avoid confusion and crashes on Windows. [Bug 920695]

2004-03-20  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXSubwindows.c (GenerateConfigureNotify): New
	function.
	(XMoveWindow): Generate configure notify events for child
	widgets on move.
	(XMoveResizeWindow): Ditto.

2004-03-18  Daniel Steffen  <das@users.sourceforge.net>

	Removed support for Mac OS Classic platform [Patch 918139]

	* doc/console.n:
	* doc/tk.n:
	* generic/README:
	* generic/default.h:
	* generic/tk.decls:
	* generic/tk.h:
	* generic/tkBind.c:
	* generic/tkCmds.c:
	* generic/tkConsole.c:
	* generic/tkFileFilter.h:
	* generic/tkGrab.c:
	* generic/tkInitScript.h:
	* generic/tkInt.decls: